add gordon quotes

--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -125,7 +125,7 @@
 
 </div>
 
-<div id="bulma-pageloader" class="pageloader is-active"><span class="title">Loading...</span></div>
+<div id="bulma-pageloader" class="pageloader is-active"><span class="loading-title"><i>“This pizza is so disgusting, if you take it to Italy you’ll get arrested.”</i> - Gordon Ramsay</span></div>
 
 <script type="text/javascript">
   let latest;
