--- a/back/templates/recipe.html
+++ b/back/templates/recipe.html
@@ -53,7 +53,7 @@
     </div>
 </section>
 
-<div id="bulma-pageloader" class="pageloader is-active"><span class="title">Loading...</span></div>
+<div id="bulma-pageloader" class="pageloader is-active"><span class="loading-title"><i>“This lamb is so undercooked, it’s following Mary to school!”</i> - Gordon Ramsay</span></div>
 
 <script>
   $(document).ready(() => {
