--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -150,11 +150,9 @@
 
         for (var i = 0; i < Object.keys(foods).length; i++) {
           if (str.toLowerCase().includes(Object.keys(foods)[i])) {
-            console.log(foods[Object.keys(foods)[i]]);
             return foods[Object.keys(foods)[i]];
           }
         }
-        console.log("nothing");
         return "";
       }
 
@@ -193,7 +191,7 @@
           $.ajax({
             url: `http://${window.location.host}/question`,
             type: "GET",
-            async: false,
+            async: true,
             success: function(res) {
               $(".title").text(`Do you have ${res.question}?`);
               addRecipes(res.recipes);
@@ -211,7 +209,7 @@
             response: "yes"
           },
           type: "GET",
-          async: false,
+          async: true,
           success: function(res) {
             $(".title").text(`Do you have ${res.question}?`);
             $(".tags").append(
@@ -235,7 +233,7 @@
             response: "no"
           },
           type: "GET",
-          async: false,
+          async: true,
           success: function(res) {
             $(".title").text(`Do you have ${res.question}?`);
             latest = res.question;
@@ -250,7 +248,7 @@
         $.ajax({
           url: `http://${window.location.host}/shuffle`,
           type: "GET",
-          async: false,
+          async: true,
           success: function(res) {
             addRecipes(res.recipes);
           },
@@ -262,7 +260,6 @@
 
       $(".delete").click(e => {
         e.preventDefault();
-        console.log("removing element");
         const elem = $(e.target);
         const parent = elem.parent();
         const text = parent.text();
@@ -270,9 +267,8 @@
         $.ajax({
           url: `http://${window.location.host}/remove?elem=${text}`,
           type: "GET",
-          async: false,
+          async: true,
           success: () => {
-            console.log("removed ingredient");
             parent.remove();
           }
         });
