Adding extra quote

--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -51,9 +51,7 @@
     </div>
 </section>
 
-<div id="bulma-pageloader" class="pageloader">
-    <span class="title">Loading...</span>
-</div>
+<div id="bulma-pageloader" class="pageloader is-active"><span class="loading-title"><i>“There’s enough garlic in here to kill every vampire in Europe.”</i> - Gordon Ramsay</span></div>
 
 <script>
   $("form input").change(function () {
