--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../static/bulma.min.css"/>
     <link rel="stylesheet" href="../static/bulma-pageloader.min.css"/>
     <script src="../static/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="../static/style.css">
 
     <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
